# assistant

./: .gitignore
.agents/skills/weather/: SKILL.md
.agents/skills/weather/scripts/: download_weather_chart.py
NAgentXO/: NAgentXO.slnx
NAgentXO/NAgentXO/: App.cs  LlmOptions.cs  NAgentXO.csproj  Program.cs  appsettings.json
src/assistant/: .gitignore  Cargo.toml  README.md
src/assistant/src/: main.rs  weather.rs
